# LearnOpenGL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: camera.h  mesh.h  shader.h  texture.h
models/bulb/: bulb.mtl
shaders/: lightShader.fs  lightShader.vs  objectShader.fs  objectShader.vs  shader.fs  shader.vs
src/: camera.cpp  camera.h  glad.c  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  texture.cpp  texture.h
